# cpp_practice

./: .gitignore
1D_advection_CPU/: CMakeLists.txt  README.md
1D_advection_CPU/include/: config.hpp  time.hpp
1D_advection_CPU/src/: config.cpp
1D_advection_GPU/: CMakeLists.txt
1D_advection_GPU/include/: advection.cuh  advection.cup  grid.cuh  quantity.cuh  quantity.hpp  utility.hpp
1D_advection_GPU/py/: read.py
1D_advection_GPU/src/: advection.cu  config.cpp  grid.cpp  main.cpp  main.cu  quantity.cu  time.cpp
mhd_CPU/: CMakeLists.txt
mhd_CPU/config/: config.json
mhd_CPU/include/: advection.hpp  array3d.hpp  artificial_viscosity.hpp  boundary_condition.hpp  config.hpp  eos.hpp  grid.hpp  mhd.hpp  model.hpp  quantity.hpp  time.hpp  time_integrator.hpp  utility.hpp
mhd_CPU/problems/shock_tube_1d/: shock_tube_1d.cpp
mhd_CPU/py/: read.py
mhd_CPU/src/: config.cpp  main.cpp  mhd.cpp  model.cpp  time.cpp
mhd_CPU/tests/: config.json  test_array3d.cpp  test_boundary_condition.cpp  test_grid.cpp
mhd_CPU/tmp/src/: advection.cpp
project001/include/: grid.hpp
project001/py/: read.py
project001/src/: quantity.cpp
